# bsf-larvae-monitoring

./: .gitignore  README.md  docker-compose.yml  verify-deployment.sh
Desktop/workspace/bsf-looptech/: .env.example  .gitignore  BSF_System_Plan.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  Dockerfile.backend  OPERATIONS_MANUAL.md  OPERATION_GUIDE.md  PRODUCTION_CHECKLIST.md  PRODUCTION_SETUP.md  README_m5stick_mqtt.md  __init__.py  alembic.ini  docker-compose.prod.yml  docker-compose.yml  kaiwa.md  keikaku.md  m5stick_bsf_mqtt.ino  m5stick_bsf_mqtt_fixed_backend_compatible.ino  memo.md  mosquitto.conf  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-test.txt  requirements.txt  shinchoku.md  test_influxdb.py  test_mqtt_client.py  test_mqtt_connection.py  test_mqtt_frontend.py  test_mqtt_publish.py  test_sensor_data.py  test_sensor_data_local.py  test_substrate_management.py
Desktop/workspace/bsf-looptech/alembic/: env.py
Desktop/workspace/bsf-looptech/config/: com.bsf-looptech.backup.plist  com.bsf-looptech.monitor.plist  com.bsf-looptech.production.plist  env.production.template  init-pgvector.sql  nginx-router.conf.template
Desktop/workspace/bsf-looptech/docs/: ACCEPTANCE_TEST_SPEC.md  BENCHMARK_RESULTS.md  Claude_Skills使用ガイド.md  DATABASE_MIGRATION.md  DATABASE_MIGRATION_GUIDE.md  DEPLOYMENT_SWITCHING.md  MAINTENANCE_SCHEDULE.md  ML_TRAINING_DATA_REQUIREMENTS.md  MQTT_SECURITY.md  MQTT_SECURITY_GUIDE.md  OPERATOR_GUIDE.md  POST_DEPLOYMENT_CHECKLIST.md  PRE_DEPLOYMENT_CHECKLIST.md  PROJECT_STATUS_ANALYSIS.md  QUICK_START.md  TESTING_GUIDE.md  TROUBLESHOOTING_FAQ.md  VPS_COMPARISON.md  (+7 more)
k8s/: config.yaml  (+3 more)
(+406 files in other folders)
